# reservoirpy

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  ESN.py  Introduction_to_RC.py  LICENSE  MackeyGlass_t17.txt  Pipfile  README.md  README_OLD.md  hyperopt_analyse_error.py  mat_gen.py  minimalESN_MackeyGlass.py  minimalESN__modified_enhanced03.py  observables.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_example_MackeyGlass.py  test.ipynb  train.sh
docs/: requirements.txt
examples/: Introduction_to_RC.ipynb  README.md  README.rst  compare_online_offline_learning.py  mackeyglass-config.json  minimal-hpt.py  minimalESN_MackeyGlass.py  online_learning_example_MackeyGlass.py  requirements_in_addition_for_examples.txt  simple_example_MackeyGlass.py
reservoirpy/: ESN.py  __init__.py  _base.py  _esn.py  _esn_online.py  _readout.py  _reservoir.py  _types.py  _utils.py  _version.py  activationsfunc.py  base.py  config.py  esn.py  esn_online.py  graphflow.py  hyperopt_analyse_error.py  hyperopt_explore.py  mat_gen.py  mixins.py  model.py  node.py  observables.py  ops.py  regression_models.py  reservoir.py  scikit_helper.py  scikit_helper2.py  type.py  types.py  utils.py
testing/: classification.py  hyper-phds.py  hyper.py  hyperopt-scikit.config.json  input_scaling.py  lstm.py  mnist.py  next_char_prediction.py  phds.py  test.py  time_series.py  ts2.py  utils.py
tutorials/: 1-Getting_Started.ipynb  2-Advanced_Features.ipynb  5-Classification-with-RC.ipynb  README.md  (+11 more)
(+1235 files in other folders)
